--- a/README.asciidoc
+++ b/README.asciidoc
@@ -9,7 +9,7 @@ You *must* use this addon if you want to use AssertJ in your addon tests.
 
 This Addon requires the following installation steps.
 
-=== Add configuration to you addon's pom.xml 
+=== Add configuration to your addon's pom.xml 
 
 To use this addon, you must add it as a dependency in the *pom.xml* of your `forge-addon` classified artifact:
 [source,xml]
